@@ -1,5 +1,8 @@
 2016-08-19  Jakub Jelinek  <jakub@redhat.com>
 
+	PR fortran/72744
+	* gfortran.dg/gomp/pr72744.f90: New test.
+
 	PR fortran/69281
 	* gfortran.dg/gomp/pr69281.f90: New test.
 
